2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/optectcfs.py:
	* src/chimera/interfaces/focuser.py:

	New Focuser modules (driver still being implemented). Interface
	well defined.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* docs/chimera.epydoc: New Epydoc (epydoc.sf.net) configuration file.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* tests/chimera/*: New unit tests starting right now (currently
	only some modules).

2007-04-24  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/scripts/chimera: Use /usr/bin/env to call python (ensure use
	of default python on the system).
	
	* src/chimera/core/site.py:  shutdown fixed (missed sys import)

	* setup.py:	
	* src/chimera/core/location.py: Python 2.3.x stuff (not full
	ported yet).

	* src/chimera/core/manager.py: Typos.
	Fix bug on the order of sys.path (our classes first by now)
	

2007-03-16  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/paramount.py: Fixed init return value.

	* src/chimera/drivers/sbig/sbig.py:

	Fixed init return value.
	Fixed expose return value (image filename).
	Fixed some typos.

	* src/chimera/drivers/sbig/sbigdrv.py:

	Added getFilterPoistion implementarion.
	Added support for multi-ccd use on openDriver and openDevice.

	* src/chimera/drivers/remoteclient.py: Fixed init return value.

	* src/config/observer.xml: New.
	* src/chimera/controllers/observer.py: New.

	* src/chimera/instruments/telescope.py:
	Added isSlewing.
	Removed default driver loading (no Fakes).
	Events disabled (RemoteClient doesn't handle events yet).

	* src/chimera/instruments/filterwheel.py:
	Removed default driver loading (no Fakes).
	Fixed init return value.

	* src/chimera/instruments/filterwheel.py:
	Fixed init return value.
	Removed default driver loading (no Fakes).

	* src/chimera/core/proxy.py:
	Fixed handle of object's __getattr__ and __getattribute__.
	Fixed __repr__.

	* src/chimera/core/manager.py: